# avalanche

./: .gitignore  99bottles.ava  COPYING  HACKING.md  Makefile.am  README.md  SPEC.md  abi-redesign.txt  configure.ac  freebsd-configure-clang.sh  freebsd-configure-gcc5.sh  hello.ava
ava-mode/: ava-mode.el
platform-native/src/: Makefile.am
platform-native/src/avalanche/: Makefile.am  abi.h  decl-obj.h  defs.h  fun-prologue.h  memory.h  subprocess.h  thread.h  threads.h
platform-native/src/memory/: stub.c
platform-native/src/threads/: subprocess.cxx  thread.c
src/: Makefile.am  avac  bsd.h  file-preamble  llvm-ir-dump.cxx
src/bootstrap/: common.h  compile-module.c  link-package.c  make-interface.c  to-asm.cxx
src/contrib/: dtoa.c  g_fmt.c
src/interp/: main.c
src/org.ava-lang.avast/: builtins.ava  byte-strings.ava  operators.ava
src/runtime/: -array-list.h  -atree.h  -bxlist.h  -context.h  -degrad-array.h  -dtoa.h  -esba-list.h  -esba.h  -hash-map.h  -hexes.h  -integer-decimal.h  -integer-fast-dec.h  -integer-parse.h  -integer-tostring.h  -internal-defs.h  -list-map.h  -pcode-conversions.h  Makefile.am  alloc.c  array-list.c  atree.c  avalanche.h  avast.c  avast.cxx  bxlist.c  code-gen.c  compenv-avast.c  compenv.c  compile-frontend.c  context.c  cuckoo-map-impl.c  degrad-array.c  dtoa.c  empty-list.c  errors.c  esba-list-swizzle.inc  esba-list.c  esba.c  exception.c  exception.cxx  (+39 more)
src/runtime/-intrinsics/: block.c  defun.c  defun.h  eh.c  eh.h  esoterica.c  esoterica.h  extern.c  extern.h  funcall.c  funcall.h  fundamental.c  fundamental.h  funmac.c  funmac.h  if.c  if.h  keysym.h  loop.c  loop.h  namespace.c  namespace.h  pasta.c  pasta.h  reg-rvalue.c  reg-rvalue.h  require.c  ret.c  ret.h  structdef.c  structdef.h  structops.c  structops.h  subscript.c  user-macro.c  user-macro.h  variable.c  variable.h
src/runtime/-llvm-support/: README  driver-iface.cxx  driver-iface.hxx  drivers.h  exception-abi.cxx  exception-abi.hxx  ir-types.cxx  ir-types.hxx  jit-context.cxx  jit-context.hxx  optimisation.cxx  optimisation.hxx  translation.cxx  translation.hxx
src/runtime/avalanche/: README  alloc.h  code-gen.h  compenv.h  compile-frontend.h  context.h  defs.h  errors.h  exception.h  function.h  generate-trait.tcl  integer.h  interp.h  jit.h  lex.h  list-proj.h  list.h  list.trait  macro-arg.h  macsub.h  map.h  map.trait  name-mangle.h  parser.h  pcode-linker.h  pcode-validation.h  pcode.h  pointer.h  pointer.trait  real.h  string.h  struct.h  symbol-table.h  symbol.h  symtab.h  value.h  varscope.h
test/: Makefile.am  compile-ava-tests.sh  test.c  test.h
test/ava-tests/: C5003_no-such-function.ava  C5003_subscript-getter-missing.ava  C5003_subscript-wither-missing.ava  C5004_subscript-getter-is-macro.ava  C5004_subscript-wither-is-macro.ava  C5007_lstring.ava  C5008_lrstring.ava  C5008_rstring.ava  C5011_struct-extra-args.ava  C5012_enum-nothing-after-equals.ava  C5012_struct-extends-nothing.ava  C5012_struct-hybrid-without-prot.ava  C5012_struct-int-alignment-without-arg.ava  C5013_hybrid-prot-not-bareword.ava  C5013_struct-type-not-bareword.ava  C5022_block-only-multi.ava  C5022_block-void-singleton.ava  C5022_use-import-as-expression.ava  C5023_discard-subscript.ava  C5023_discard-var-read.ava  C5026_middle.ava  C5028_assign-to-set.ava  C5029_assign-to-static-struct.ava  C5030_assign-to-closed-var.ava  C5032_ambiguous-var.ava  C5035_bad-macro-type.ava  C5037_lone-percent.ava  C5037_lone-what.ava  C5039_resolved-expander-in-macro-not-found.ava  C5042_gensym-expander.ava  C5042_splice-expander.ava  C5043_huge-macro-slice-offset.ava  C5043_hyphen-x.ava  C5043_lone-hyphen.ava  C5043_x.ava  C5045_macro-left-angle-requires-args.ava  C5045_slice-right-from-left-too-short.ava  C5046_try-finally-expr.ava  C5047_missing-import-dest.ava  C5048_import-nothing.ava  (+218 more)
test/ava-tests/helpers/: _require-5107.ava  assert-equals-int.ava  assert.ava  decl-pass-test.ava  decl-public-enum.ava  define-keysym-and-alias.ava  expose-exstatic-target-b.ava  require-fourty-two.ava  test.ava
test/benchmarks/: README
test/benchmarks/list/: JavaArrayList.java  README  avalanche.c  glib.c  python27.py  tcl86.tcl
test/benchmarks/map/: README  avalanche.c  glib.c  python27.py  tcl86.tcl
test/benchmarks/string/: length.c
test/runtime/: macro-test-common.h  parser-utils.h  rope-vis.c  test-array-list.c  test-atree.c  test-avalanche.c  test-bxlist.c  test-empty-list.c  test-esba-list.c  test-esba.c  test-exception.c  test-function.c  test-hash-map.c  test-integer.c  test-interp.c  test-interval.c  test-intrinsics-fundamental.c  test-lex.c  test-list-map.c  test-list-proj.c  test-list.c  test-macsub.c  test-map.c  test-module-cache.c  test-name-mangle.c  test-parser.c  test-pcode-linker.c  test-pcode-validation.c  test-pcode.c  test-pointer.c  test-real.c  test-string.c  test-struct.c  test-symbol-table.c  test-symtab.c  test-value.c  test-varscope.c
test/runtime/ava-tests/: C5002_ambiguous-function.ava  C5004_not-a-function.ava  C5004_subscript-getter-is-var.ava  C5007_lrstring.ava  C5009_astring.ava  C5009_verbatim.ava  C5012_alias.ava  C5013_fun-optional-name-not-bareword.ava  C5013_import.ava  C5013_loop-nonbareword-at-clause-id.ava  C5014_extern.ava  C5015_fun-optional-default-not-literal.ava  C5017_alias.ava  C5017_fun-duplicate-arg-name.ava  C5017_fun-duplicate-named-arg-name.ava  C5020_ambiguous-bareword.ava  C5021_assign-to-import.ava  C5021_assign-to-namespace.ava  C5029_assign-to-constant.ava  C5031_assign-to-var-read.ava  C5033_no-such-var.ava  C5034_read-import-as-var.ava  C5036_negative-precedence.ava  C5036_too-high-precedence.ava  C5036_zero-precedence.ava  C5037_lone-bang.ava  C5038_leading-hash-only.ava  C5040_macro-resolved-ambiguous.ava  C5041_internal-symbol-public-macro.ava  C5042_bareword.ava  C5042_var-read.ava  C5043_digits-hyphen.ava  C5045_macro-right-angle-requires-args.ava  C5045_macro-slice-left-range-no-args.ava  C5045_slice-left-from-left-too-short.ava  C5045_slice-left-from-right-too-short.ava  C5046_namespace.ava  C5049_if-misspelled-else.ava  (+186 more)
(+318 files in other folders)
